Fix 2nd scrollbar issue.

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -57,7 +57,7 @@ body {
 
 #tab-overflow {
     display: inline-block;
-    width: 32px;
+    width: 37px;
 }
 
 #tab-overflow button {
